fix alignement issue

--- a/src/components/task-list/task-list-header.module.css
+++ b/src/components/task-list/task-list-header.module.css
@@ -20,5 +20,9 @@
   display: table-cell;
   vertical-align: -webkit-baseline-middle;
   vertical-align: middle;
+}
+
+.ganttTable_HeaderItem span {
+  display: block;
   padding-left: 8px;
 }
